Add async request, parallel execution and aggregate
#19022020-0242

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,5 @@
+#exchange:
+#  source: http://www.mocky.io/v2/5c51b9dd3400003252129fb5
+
 exchange:
-  source: http://www.mocky.io/v2/5c51b9dd3400003252129fb5
+  source: http://www.mocky.io/v2/5e4c554731000091c8d8bf03
